Updates header and fixes layout bug
Updates header content and fixes a layout bug for project tags on smaller screens.

--- a/styles/index.css
+++ b/styles/index.css
@@ -309,6 +309,7 @@ i {
 
 .tags-ul {
   gap: var(--spacing-s);
+  flex-wrap: wrap;
 }
 
 .tag {
